# face-mask-detection

./: .gitignore  README.md  pyproject.toml
fmdtools/dataset/: dataset.py
notebooks/: face-mask-detection.ipynb  test.ipynb
